crates/keron-lang/tests/corpus/errors/check/forward_ref.keron
val one = two + 1
val two = 10
